Add rich search information

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,12 +1,33 @@
 <!doctype html>
 <html>
 <head>
-    <title>deepStabP</title>
+    <title>DeepSTABp</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <meta name="description" content="Protein thermal stability is an important parameter for understanding protein function, designing protein-based therapeutics, and improving the stability of enzymes used in industrial processes. This web interface allows you to utilize the deep learning model DeepSTABp to predict the melting point of a protein of your choice!">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- JSON-LD-Markup generiert von Google Strukturierte Daten: Markup-Hilfe -->
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "SoftwareApplication",
+          "name": "DeepSTABp",
+          "operatingSystem": "Web",
+          "image": "https://csb-deepstabp.bio.rptu.de/Images/Logo.png",
+          "publisher": {
+            "@type": "Organization",
+            "name": "Computational Systems Biology department"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0"
+          },
+          "applicationCategory": "BrowserApplication",
+          "softwareVersion": "1.0.3"
+        }
+    </script>
 </head>
 <body>
     <div id="elmish-app"></div>
