--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Protein thermal stability is an important parameter for understanding protein function, designing protein-based therapeutics, and improving the stability of enzymes used in industrial processes. This web interface allows you to utilize the deep learning model DeepSTABp to predict the melting point of a protein of your choice!">
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!--https://search.google.com/search-console/welcome-->
+    <meta name="google-site-verification" content="eUbc0CH2x8EElGcF6s8CrzaV8uyoqFuohn9iaao8ckc" />
     <!-- JSON-LD-Markup generiert von Google Strukturierte Daten: Markup-Hilfe -->
     <script type="application/ld+json">
         {
@@ -28,6 +28,8 @@
           "softwareVersion": "1.0.3"
         }
     </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
     <div id="elmish-app"></div>
