Update google search description

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -4,7 +4,7 @@
     <title>DeepSTABp</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Protein thermal stability is an important parameter for understanding protein function, designing protein-based therapeutics, and improving the stability of enzymes used in industrial processes. This web interface allows you to utilize the deep learning model DeepSTABp to predict the melting point of a protein of your choice!">
+    <meta name="description" content="deepSTAPp is a AI based web tool to predict the melting temperature (Tm) of proteins based on their amino acid sequence and various growth conditions.">
     <!--https://search.google.com/search-console/welcome-->
     <meta name="google-site-verification" content="W9AY3xPw4lQyd5O-IRr_dq513tAAVdtbvziVucW_uPo" />
     <!-- JSON-LD-Markup generiert von Google Strukturierte Daten: Markup-Hilfe -->
